# ads-scanner

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml  code-quality.yml  release.yml
include/: helperfunctions.hpp  kufar.hpp  logging.hpp  networking.hpp  telegram.hpp
src/: helperfunctions.cpp  kufar.cpp  logging.cpp  main.cpp  networking.cpp  telegram.cpp
